deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: mywebsite
spec:
  strategy:
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - mywebsite
        from:
          kind: ImageStreamTag
          name: 'mywebsite:latest'
  replicas: 1
  selector:
    app: mywebsite
  template:
    metadata:
      labels:
        app: mywebsite
    spec:
      containers:
        - env:
            - name: MONGO-USERNAME
              valueFrom:
                secretKeyRef:
                  name: mongo
                  key: mongo-username
            - name: MONGO-PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo
                  key: mongo-password
            - name: MONGO-USERNAME
              valueFrom:
                secretKeyRef:
                  name: mongo
                  key: mongo-database  
          name: mywebsite
          image: mywebsite:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
