service.yml
apiVersion: v1
kind: Service
metadata:
  name: mywebsite
spec:
  selector:
    app: mywebsite
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
