route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mywebsite
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: mywebsite
    weight: 100
  wildcardPolicy: None
